--- a/MyApplication1/MyApplication1/MyApplication1/MyApplication1.csproj
+++ b/MyApplication1/MyApplication1/MyApplication1/MyApplication1.csproj
@@ -36,11 +36,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="CategoryListPage.cs" />
     <Compile Include="Views\ArticlePage.xaml.cs">
       <DependentUpon>ArticlePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\CreatePage.xaml.cs">
       <DependentUpon>CreatePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CreatePageTwo.xaml.cs">
+      <DependentUpon>CreatePageTwo.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\HelloXamlPage.xaml.cs">
       <DependentUpon>HelloXamlPage.xaml</DependentUpon>
@@ -93,6 +97,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\ArticlePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\CreatePageTwo.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
