--- a/MyApplication1/MyApplication1/MyApplication1/packages.config
+++ b/MyApplication1/MyApplication1/MyApplication1/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xamarin.Forms" version="1.3.3.6323" targetFramework="portable45-net45+win8+wp8" />
 </packages>
