--- a/MyApplication1/MyApplication1/MyApplication1/MyApplication1.csproj
+++ b/MyApplication1/MyApplication1/MyApplication1/MyApplication1.csproj
@@ -36,7 +36,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
-    <Compile Include="CategoryListPage.cs" />
     <Compile Include="Service References\aspverbindung\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -47,6 +46,9 @@
     </Compile>
     <Compile Include="Views\CreatePage.xaml.cs">
       <DependentUpon>CreatePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CreatePageThree.xaml.cs">
+      <DependentUpon>CreatePageThree.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\CreatePageTwo.xaml.cs">
       <DependentUpon>CreatePageTwo.xaml</DependentUpon>
@@ -145,6 +147,12 @@
       <Generator>DataServicesCoreClientGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\CreatePageThree.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
