--- a/MyApplication1/MyApplication1/MyApplication1/MyApplication1.csproj
+++ b/MyApplication1/MyApplication1/MyApplication1/MyApplication1.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Views\ArticleDataModel.cs" />
     <Compile Include="Service References\aspverbindung\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
