--- a/MyApplication1/MyApplication1/MyApplication1.Droid/MyApplication1.Droid.csproj
+++ b/MyApplication1/MyApplication1/MyApplication1.Droid/MyApplication1.Droid.csproj
@@ -40,7 +40,7 @@
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
     <BundleAssemblies>False</BundleAssemblies>
     <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
-    <AndroidSupportedAbis />
+    <AndroidSupportedAbis>armeabi,armeabi-v7a,x86,arm64-v8a</AndroidSupportedAbis>
     <AndroidStoreUncompressedFileExtensions />
     <MandroidI18n />
     <Debugger>Xamarin</Debugger>
