--- a/MyApplication1/MyApplication1/MyApplication1.Droid/Properties/AndroidManifest.xml
+++ b/MyApplication1/MyApplication1/MyApplication1.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="MyApp1.MyApp1" android:installLocation="auto" android:versionName="proto" android:versionCode="1.0">
 	<uses-sdk android:minSdkVersion="15" />
-	<application></application>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="MyApp1"></application>
 </manifest>
