--- a/MyApplication1/MyApplication1/MyApplication1/packages.config
+++ b/MyApplication1/MyApplication1/MyApplication1/packages.config
@@ -3,6 +3,10 @@
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.OData.Client" version="6.13.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.OData.Core" version="6.13.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.OData.Edm" version="6.13.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Microsoft.Spatial" version="6.13.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="System.Spatial" version="5.7.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xamarin.Forms" version="1.3.3.6323" targetFramework="portable45-net45+win8+wp8" />
 </packages>
